@@ -27,7 +27,7 @@ before_install:
 jobs:
   include:
     - stage: check
-      rvm: 2.4.1
+      rvm: 2.4.4
       env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 5"
       script:
         - bundle exec rake check:dot_underscore
@@ -40,7 +40,7 @@ jobs:
         - bundle exec puppet module build
 
     - stage: spec
-      rvm: 2.4.1
+      rvm: 2.4.4
       env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 5.0"
       script:
         - bundle exec rake spec
@@ -64,7 +64,7 @@ jobs:
         - bundle exec rake spec
 
     - stage: deploy
-      rvm: 2.4.1
+      rvm: 2.4.4
       script:
         - true
       before_deploy:
@@ -85,5 +85,4 @@ jobs:
             secure: "JoVAq79q1qKKWvJHRcEsA/wikJCl8gEQL/NNLBWec90vjFV5U9MYribzNbRAitJRtCD1NQ2i982+dmmboHE8VcOrcMGmZPt8ivBSCNc0uwXtJUasFXgN+B4JPSyFrOWOJgc9D0ctu31H8RQ1h4k1gZh2IxiNn/oRV26g6xQQD2iAo0v0IpR5k3XdwqIo+Sd0Zdj4lj5p8LpMBP9n9LEro2hREsQyZrPNMVa8sJvoonPMo87xl7fX5GPPxbA3kUCIL7ijQMqgfGLxcmaYLbtmaNRoQsl+rL7oy/AHEJkt/PsrXmrmKo+EpbyPDbay8Ur+X1iwlIPRNZLLdZzS56oRr2hYrBfQ4NUa9VEnSPkzvSMrPn8tJCNM2JojTn9b2U1/P+a20E0gUFvGvN7mra8BliR5/jx95JITyPR4erzk1qXGQBUwsFBghSMQbgo/krog3zBifdgSU5VsJO3SXhsKtAD9HpJl2OQ3wz5l7yy2vnoZeaX2vGPJdkHJAaBYJAyYft9yfHYF8b9bOBvm0tjMNV+hepRfyJ2vVxl32E15YFOpMlNm86Q9cTwls2k3ZkRLpbeSb9bJCIQhOdNl5zLshDzzKFeZi7r5767H43wDmeLfpCzwakHErxG9LSlALr4CKPtn/1ygvKFjebninF97SVNT+9kO7Nby5HxX/OIwEbU="
           on:
             tags: true
-            rvm: 2.4.1
             condition: '($SKIP_FORGE_PUBLISH != true)'
