@@ -22,9 +22,9 @@ describe 'fips' do
           it {
             is_expected.to create_kernel_parameter('fips').with_value('1')
             is_expected.to create_kernel_parameter('fips').that_notifies('Reboot_notify[fips]')
-            is_expected.to create_package('dracut-fips').with_ensure('latest')
+            is_expected.to create_package('dracut-fips').with_ensure('installed')
             is_expected.to create_package('dracut-fips').that_notifies('Exec[dracut_rebuild]')
-            is_expected.to create_package('fipscheck').with_ensure('latest')
+            is_expected.to create_package('fipscheck').with_ensure('installed')
           }
           it { is_expected.to create_kernel_parameter('boot').with_value("UUID=123-456-790") }
           it { is_expected.to create_kernel_parameter('boot').that_notifies('Reboot_notify[fips]') }
@@ -41,9 +41,9 @@ describe 'fips' do
             it {
               is_expected.to create_kernel_parameter('fips').with_value('1')
               is_expected.to create_kernel_parameter('fips').that_notifies('Reboot_notify[fips]')
-              is_expected.to create_package('dracut-fips').with_ensure('latest')
+              is_expected.to create_package('dracut-fips').with_ensure('installed')
               is_expected.to create_package('dracut-fips').that_notifies('Exec[dracut_rebuild]')
-              is_expected.to create_package('fipscheck').with_ensure('latest')
+              is_expected.to create_package('fipscheck').with_ensure('installed')
             }
             it { is_expected.to create_kernel_parameter('boot').with_ensure('absent') }
             it { is_expected.to create_reboot_notify('fips') }
@@ -64,9 +64,9 @@ describe 'fips' do
           it {
             is_expected.to create_kernel_parameter('fips').with_value('1')
             is_expected.to create_kernel_parameter('fips').that_notifies('Reboot_notify[fips]')
-            is_expected.to create_package('dracut-fips-aesni').with_ensure('latest')
+            is_expected.to create_package('dracut-fips-aesni').with_ensure('installed')
             is_expected.to create_package('dracut-fips-aesni').that_notifies('Exec[dracut_rebuild]')
-            is_expected.to create_package('fipscheck').with_ensure('latest')
+            is_expected.to create_package('fipscheck').with_ensure('installed')
           }
           it { is_expected.to create_kernel_parameter('boot').with_value("UUID=123-456-790") }
           it { is_expected.to create_kernel_parameter('boot').that_notifies('Reboot_notify[fips]') }
